PI_GCS2_DLL.h

////////////////////////////////
// E-7XX Bits (PI_BIT_XXX). //
////////////////////////////////

/* Curve Controll PI_BIT_WGO_XXX */
#define PI_BIT_WGO_START_DEFAULT			0x00000001U
#define PI_BIT_WGO_START_EXTERN_TRIGGER		0x00000002U
#define PI_BIT_WGO_WITH_DDL_INITIALISATION	0x00000040U
#define PI_BIT_WGO_WITH_DDL					0x00000080U
#define PI_BIT_WGO_START_AT_ENDPOSITION		0x00000100U
#define PI_BIT_WGO_SINGLE_RUN_DDL_TEST		0x00000200U
#define PI_BIT_WGO_EXTERN_WAVE_GENERATOR	0x00000400U
#define PI_BIT_WGO_SAVE_BIT_1				0x00100000U
#define PI_BIT_WGO_SAVE_BIT_2				0x00200000U
#define PI_BIT_WGO_SAVE_BIT_3				0x00400000U
/* Wave-Trigger PI_BIT_TRG_XXX */
#define	PI_BIT_TRG_LINE_1					0x0001U
#define	PI_BIT_TRG_LINE_2					0x0002U
#define	PI_BIT_TRG_LINE_3					0x0003U
#define	PI_BIT_TRG_LINE_4					0x0008U
#define	PI_BIT_TRG_ALL_CURVE_POINTS			0x0100U
/* Data Record Configuration PI_DRC_XXX */
#define	PI_DRC_DEFAULT					0U
#define	PI_DRC_AXIS_TARGET_POS			1U
#define	PI_DRC_AXIS_ACTUAL_POS			2U
#define	PI_DRC_AXIS_POS_ERROR			3U
#define	PI_DRC_AXIS_DDL_DATA			4U
#define	PI_DRC_AXIS_DRIVING_VOL			5U
#define	PI_DRC_PIEZO_MODEL_VOL			6U
#define	PI_DRC_PIEZO_VOL				7U
#define	PI_DRC_SENSOR_POS				8U
/* P(arameter)I(nfo)F(lag)_M(emory)T(ype)_XX */
#define PI_PIF_MT_RAM					0x00000001U
#define PI_PIF_MT_EPROM					0x00000002U
#define PI_PIF_MT_ALL					(PI_PIF_MT_RAM | PI_PIF_MT_EPROM)
/* P(arameter)I(nfo)F(lag)_D(ata)T(ype)_XX */
#define PI_PIF_DT_INT					1U
#define PI_PIF_DT_FLOAT					2U
#define PI_PIF_DT_CHAR					3U
/////////////////////////////////////////////////////////////////////////////
// DLL initialization and comm functions
int	PI_FUNC_DECL	PI_InterfaceSetupDlg(const char* szRegKeyName);
int 	PI_FUNC_DECL	PI_ConnectRS232(int nPortNr, int iBaudRate);
int 	PI_FUNC_DECL	PI_OpenRS232DaisyChain(int iPortNumber, int iBaudRate, int* pNumberOfConnectedDaisyChainDevices, char* szDeviceIDNs, int iBufferSize);
int 	PI_FUNC_DECL	PI_ConnectDaisyChainDevice(int iPortId, int iDeviceNumber);
void 	PI_FUNC_DECL	PI_CloseDaisyChain(int iPortId);
int	    PI_FUNC_DECL	PI_ConnectNIgpib(int nBoard, int nDevAddr);
int	    PI_FUNC_DECL	PI_ConnectTCPIP(const char* szHostname, int port);
int	    PI_FUNC_DECL	PI_EnableTCPIPScan(int iMask);
int	    PI_FUNC_DECL	PI_EnumerateTCPIPDevices(char* szBuffer, int iBufferSize, const char* szFilter);
int	    PI_FUNC_DECL	PI_ConnectTCPIPByDescription(const char* szDescription);
int	    PI_FUNC_DECL	PI_EnumerateUSB(char* szBuffer, int iBufferSize, const char* szFilter);
int	    PI_FUNC_DECL	PI_ConnectUSB(const char* szDescription);
int	    PI_FUNC_DECL	PI_ConnectUSBWithBaudRate(const char* szDescription,int iBaudRate);
int 	PI_FUNC_DECL	PI_OpenUSBDaisyChain(const char* szDescription, int* pNumberOfConnectedDaisyChainDevices, char* szDeviceIDNs, int iBufferSize);
BOOL	PI_FUNC_DECL	PI_IsConnected(int ID);
void	PI_FUNC_DECL	PI_CloseConnection(int ID);
int	    PI_FUNC_DECL	PI_GetError(int ID);
BOOL	PI_FUNC_DECL	PI_SetErrorCheck(int ID, BOOL bErrorCheck);
BOOL	PI_FUNC_DECL	PI_TranslateError(int errNr, char* szBuffer, int iBufferSize);
/////////////////////////////////////////////////////////////////////////////
// general
BOOL PI_FUNC_DECL PI_qERR(int ID, int* pnError);
BOOL PI_FUNC_DECL PI_qIDN(int ID, char* szBuffer, int iBufferSize);
BOOL PI_FUNC_DECL PI_INI(int ID, const char* szAxes);
BOOL PI_FUNC_DECL PI_qHLP(int ID, char* szBuffer, int iBufferSize);
BOOL PI_FUNC_DECL PI_qHPA(int ID, char* szBuffer, int iBufferSize);
BOOL PI_FUNC_DECL PI_qHPV(int ID, char* szBuffer, int iBufferSize);
BOOL PI_FUNC_DECL PI_qCSV(int ID, double* pdCommandSyntaxVersion);
BOOL PI_FUNC_DECL PI_qOVF(int ID, const char* szAxes, BOOL* piValueArray);
BOOL PI_FUNC_DECL PI_RBT(int ID);
BOOL PI_FUNC_DECL PI_REP(int ID);
BOOL PI_FUNC_DECL PI_BDR(int ID, int iBaudRate);
BOOL PI_FUNC_DECL PI_qBDR(int ID, int* iBaudRate);
BOOL PI_FUNC_DECL PI_DBR(int ID, int iBaudRate);
BOOL PI_FUNC_DECL PI_qDBR(int ID, int* iBaudRate);
BOOL PI_FUNC_DECL PI_qVER(int ID, char* szBuffer, int iBufferSize);
BOOL PI_FUNC_DECL PI_qSSN(int ID, char* szSerialNumber, int iBufferSize);
BOOL PI_FUNC_DECL PI_CCT(int ID, int iCommandType);
BOOL PI_FUNC_DECL PI_qCCT(int ID, int *iCommandType);
BOOL PI_FUNC_DECL PI_qTVI(int ID, char* szBuffer, int iBufferSize);
BOOL PI_FUNC_DECL PI_IFC(int ID, const char* szParameters, const char* szValues);
BOOL PI_FUNC_DECL PI_qIFC(int ID, const char* szParameters, char* szBuffer, int iBufferSize);
BOOL PI_FUNC_DECL PI_IFS(int ID, const char* szPassword, const char* szParameters, const char* szValues);
BOOL PI_FUNC_DECL PI_qIFS(int ID, const char* szParameters, char* szBuffer, int iBufferSize);
BOOL PI_FUNC_DECL PI_MOV(int ID, const char* szAxes, const double* pdValueArray);
BOOL PI_FUNC_DECL PI_qMOV(int ID, const char* szAxes, double* pdValueArray);
BOOL PI_FUNC_DECL PI_MVR(int ID, const char* szAxes, const double* pdValueArray);
BOOL PI_FUNC_DECL PI_POS(int ID, const char* szAxes, const double* pdValueArray);
BOOL PI_FUNC_DECL PI_qPOS(int ID, const char* szAxes, double* pdValueArray);
BOOL PI_FUNC_DECL PI_IsMoving(int ID, const char* szAxes, BOOL* pbValueArray);
BOOL PI_FUNC_DECL PI_HLT(int ID, const char* szAxes);
BOOL PI_FUNC_DECL PI_STP(int ID);
BOOL PI_FUNC_DECL PI_qONT(int ID, const char* szAxes, BOOL* pbValueArray);
BOOL PI_FUNC_DECL PI_RTO(int ID, const char* szAxes);
BOOL PI_FUNC_DECL PI_qRTO(int ID, const char* szAxes, int* piValueArray);
BOOL PI_FUNC_DECL PI_ATZ(int ID, const char* szAxes, const double* pdLowvoltageArray, const BOOL* pfUseDefaultArray);
BOOL PI_FUNC_DECL PI_qATZ(int ID, const char* szAxes, int* piAtzResultArray);
BOOL PI_FUNC_DECL PI_AOS(int ID, const char* szAxes, const double* pdValueArray);
BOOL PI_FUNC_DECL PI_qAOS(int ID, const char* szAxes, double* pdValueArray);
BOOL PI_FUNC_DECL PI_SVA(int ID, const char* szAxes, const double* pdValueArray);
BOOL PI_FUNC_DECL PI_qSVA(int ID, const char* szAxes, double* pdValueArray);