PI_Programming_Files_PI_GCS2_DLL/PI_GCS2.cs

using System;
using System.Runtime.InteropServices;
using System.Text;


namespace PI
{

	/// <summary>
	/// Summary description for PI_G.
	/// </summary>
	public class GCS2
	{


        ////////////////////////////////
        // PI_GCS2 Bits (PI_BIT_XXX). //
        ////////////////////////////////

        /* Curve Controll PI_BIT_WGO_XXX */
        public const uint PI_BIT_WGO_START_DEFAULT			    = 0x00000001;
        public const uint PI_BIT_WGO_START_EXTERN_TRIGGER		= 0x00000002;
        public const uint PI_BIT_WGO_WITH_DDL_INITIALISATION	= 0x00000040;
        public const uint PI_BIT_WGO_WITH_DDL					= 0x00000080;
        public const uint PI_BIT_WGO_START_AT_ENDPOSITION		= 0x00000100;
        public const uint PI_BIT_WGO_SINGLE_RUN_DDL_TEST		= 0x00000200;
        public const uint PI_BIT_WGO_EXTERN_WAVE_GENERATOR	    = 0x00000400;
        public const uint PI_BIT_WGO_SAVE_BIT_1				    = 0x00100000;
        public const uint PI_BIT_WGO_SAVE_BIT_2				    = 0x00200000;
        public const uint PI_BIT_WGO_SAVE_BIT_3				    = 0x00400000;

        /* Wave-Trigger PI_BIT_TRG_XXX */
        public const uint PI_BIT_TRG_LINE_1					    = 0x0001;
        public const uint PI_BIT_TRG_LINE_2					    = 0x0002;
        public const uint PI_BIT_TRG_LINE_3					    = 0x0003;
        public const uint PI_BIT_TRG_LINE_4					    = 0x0008;
        public const uint PI_BIT_TRG_ALL_CURVE_POINTS			= 0x0100;

        /* Data Record Configuration PI_DRC_XXX */
        public const uint PI_DRC_DEFAULT					    = 0;
        public const uint PI_DRC_AXIS_TARGET_POS			    = 1;
        public const uint PI_DRC_AXIS_ACTUAL_POS			    = 2;
        public const uint PI_DRC_AXIS_POS_ERROR			        = 3;
        public const uint PI_DRC_AXIS_DDL_DATA			        = 4;
        public const uint PI_DRC_AXIS_DRIVING_VOL			    = 5;
        public const uint PI_DRC_PIEZO_MODEL_VOL			    = 6;
        public const uint PI_DRC_PIEZO_VOL				        = 7;
        public const uint PI_DRC_SENSOR_POS				        = 8;


        /* P(arameter)I(nfo)F(lag)_M(emory)T(ype)_XX */
        public const uint PI_PIF_MT_RAM					        = 0x00000001;
        public const uint PI_PIF_MT_EPROM					    = 0x00000002;
        public const uint PI_PIF_MT_ALL					        = (PI_PIF_MT_RAM | PI_PIF_MT_EPROM);

        /* P(arameter)I(nfo)F(lag)_D(ata)T(ype)_XX */
        public const uint PI_PIF_DT_INT					        = 1;
        public const uint PI_PIF_DT_FLOAT					    = 2;
        public const uint PI_PIF_DT_CHAR					    = 3;


        /////////////////////////////////////////////////////////////////////////////
        // DLL initialization and comm functions
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_InterfaceSetupDlg")]		    public static extern int	InterfaceSetupDlg(string sRegKeyName);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_ConnectRS232")]		        public static extern int	ConnectRS232(int nPortNr, int nBaudRate);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_OpenRS232DaisyChain")]		public static extern int	OpenRS232DaisyChain(int iPortNumber, int iBaudRate, ref int pNumberOfConnectedDaisyChainDevices, StringBuilder sDeviceIDNs, int iBufferSize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_ConnectDaisyChainDevice")]	public static extern int	ConnectDaisyChainDevice(int iPortId, int iDeviceNumber);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_CloseDaisyChain")]		    public static extern void	CloseDaisyChain(int iPortId);

        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_ConnectNIgpib")]		        public static extern int	ConnectNIgpib(int nBoard, int nDevAddr);

        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_ConnectTCPIP")]		        public static extern int	ConnectTCPIP(string sHostname, int port);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_EnableTCPIPScan")]		    public static extern int	EnableTCPIPScan(int iMask);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_EnumerateTCPIPDevices")]		public static extern int	EnumerateTCPIPDevices(StringBuilder sBuffer, int iBufferSize, string sFilter);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_ConnectTCPIPByDescription")]	public static extern int	ConnectTCPIPByDescription(string szDescription);

        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_EnumerateUSB")]              public static extern int    EnumerateUSB(StringBuilder sBuffer, int iBufferSize, string sFilter);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_ConnectUSB")]               public static extern int    ConnectUSB(string sDescription);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_ConnectUSBWithBaudRate")]    public static extern int    ConnectUSBWithBaudRate(string sDescription, int iBaudRate);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_OpenUSBDaisyChain")]         public static extern int    OpenUSBDaisyChain(string sDescription, ref int pNumberOfConnectedDaisyChainDevices, StringBuilder sDeviceIDNs, int iBufferSize);

        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_IsConnected")]		        public static extern int	IsConnected(int ID);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_CloseConnection")]		    public static extern int	CloseConnection(int ID);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_GetError")]		            public static extern int	GetError(int ID);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_SetErrorCheck")]		        public static extern int	SetErrorCheck(int ID, int bErrorCheck);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_TranslateError")]		    public static extern int	TranslateError(int errNr, StringBuilder sBuffer, int iBufferSize);




        /////////////////////////////////////////////////////////////////////////////
        // general
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qERR")]          public static extern int qERR(int ID, ref int pnError);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qIDN")]		    public static extern int qIDN(int ID, StringBuilder sBuffer, int iBufferSize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_INI")]           public static extern int INI(int ID, string sAxes);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qHLP")]          public static extern int qHLP(int ID, StringBuilder sBuffer, int iBufferSize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qHPA")]          public static extern int qHPA(int ID, StringBuilder sBuffer, int iBufferSize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qHPV")]          public static extern int qHPV(int ID, StringBuilder sBuffer, int iBufferSize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qCSV")]          public static extern int qCSV(int ID, ref double dCommandSyntaxVersion);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qOVF")]          public static extern int qOVF(int ID, string sAxes, int[] iValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_RBT")]           public static extern int RBT(int ID);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_REP")]           public static extern int REP(int ID);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_BDR")]           public static extern int BDR(int ID, int iBaudRate);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qBDR")]          public static extern int qBDR(int ID, ref int iBaudRate);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_DBR")]           public static extern int DBR(int ID, int iBaudRate);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qDBR")]          public static extern int qDBR(int ID, ref int iBaudRate);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qVER")]          public static extern int qVER(int ID, StringBuilder sBuffer, int iBufferSize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qSSN")]          public static extern int qSSN(int ID, StringBuilder sSerialNumber, int iBufferSize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_CCT")]           public static extern int CCT(int ID, int iCommandType);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qCCT")]          public static extern int qCCT(int ID, ref int iCommandType);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qTVI")]          public static extern int qTVI(int ID, StringBuilder sBuffer, int iBufferSize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_IFC")]           public static extern int IFC(int ID, string sParameters, string sValues);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qIFC")]          public static extern int qIFC(int ID, string sParameters, StringBuilder sBuffer, int iBufferSize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_IFS")]           public static extern int IFS(int ID, string sPassword, string sParameters, string sValues);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qIFS")]          public static extern int qIFS(int ID, string sParameters, StringBuilder sBuffer, int iBufferSize);

        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_MOV")]           public static extern int MOV(int ID, string sAxes, double[] dValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qMOV")]          public static extern int qMOV(int ID, string sAxes, double[] dValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_MVR")]           public static extern int MVR(int ID, string sAxes, double[] dValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_POS")]           public static extern int POS(int ID, string sAxes, double[] dValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qPOS")]          public static extern int qPOS(int ID, string sAxes, double[] dValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_IsMoving")]      public static extern int IsMoving(int ID, string sAxes, int[] bValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_HLT")]           public static extern int HLT(int ID, string sAxes);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_STP")]           public static extern int STP(int ID);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qONT")]          public static extern int qONT(int ID, string sAxes, int[] bValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_RTO")]           public static extern int RTO(int ID, string sAxes);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qRTO")]          public static extern int qRTO(int ID, string sAxes, int[] iValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_ATZ")]           public static extern int ATZ(int ID, string sAxes, double[] dLowvoltageArray, int[] fUseDefaultArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qATZ")]          public static extern int qATZ(int ID, string sAxes, int[] iAtzResultArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_AOS")]          public static extern int AOS(int ID, string sAxes, double[] dValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qAOS")]          public static extern int qAOS(int ID, string sAxes, double[] dValueArray);

        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_SVA")]           public static extern int SVA(int ID, string sAxes, double[] dValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qSVA")]          public static extern int qSVA(int ID, string sAxes, double[] dValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_AVR")]           public static extern int SVR(int ID, string sAxes, double[] dValueArray);
